# api-meta-store

./: .editorconfig  .gitmodules  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: build_and_test.yml  publish_client.yml
api/: config.py  databases.py  exceptions.py  files.py  records.py  server.py  utils.py
build_client/typescript/: .release-it.json  gen_client.sh  package-lock.json  package.json
test/: common.py  test_api.py  test_config.py  test_databases.py  test_files.py  test_records.py  test_schemas.py  test_utils.py
test/assets/test_v4/: default.json  default.original.json
