[build-system]
requires = ["poetry >= 0.12", "wheel", "setuptools"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "api-meta-store"
version = "0.1.0"
description = "An API for managing metadata"
license = "Apache-2.0"
authors = [
    "Daiki Hayashi <hayashi.daiki@hdwlab.co.jp>"
]
readme = 'README.md'
repository = "https://github.com/dataware-tools/api-meta-store.git"
homepage = "https://github.com/dataware-tools/api-meta-store"
keywords = ['template', 'dataware', 'api']
classifiers=[
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Operating System :: POSIX :: Linux",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = ">=3.8,<4"
dataware-tools-api-helper = { git = "https://github.com/dataware-tools/api-helper-python.git", branch = "master" }
pydtk = { git = "https://github.com/dataware-tools/pydtk.git", extras = ["mongodb"] }
fastapi = "^0.65.0"
uvicorn = "^0.13.4"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
pytest = "^6.1.1"
tox = "^3.20.0"
schemathesis = "^3.7.4"
